# arcus

./: .gitignore  Containerfile  LICENSE_MIT  README.md  build-podman.sh  package-thunderbird.sh
arcus-wasm/: .gitignore  Cargo.toml
arcus-wasm/src/: encrypt.rs  lib.rs
thunderbird/: arcus.js  arcus_bg.wasm  displayscript.js  manifest.json  utils.js
thunderbird/background/: background.html  background.js  composeAction.js
thunderbird/compose_popup/: compose_popup.html  compose_popup.js
thunderbird/tab/: tab.html  tab.js
